# LocalQwen3TTS_mac

./: .gitignore  README.md
.claude/skills/: agent-identifier
backend/: .gitignore  README.md  pyproject.toml
backend/app/: api.py  cache.py  config.py  devices.py  main.py  model_manager.py  schemas.py  storage.py  utils_audio.py  worker.py
backend/app/scripts/: run_batch.py
backend/qwen3_tts_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: benchmark.py  check_backend.py
backend/tests/: test_health.py  test_tts_smoke.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
