[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-tts-backend"
version = "0.1.0"
description = "Minimal production-shaped FastAPI backend for Qwen3-TTS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "soundfile>=0.12",
    "numpy>=1.26",
    "torch>=2.3",
    "httpx>=0.27",
    "loguru>=0.7",
    "aiofiles>=23.2",
    "python-multipart>=0.0.9",
    "tenacity>=8.2",
    "typing-extensions>=4.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "anyio>=4.4"
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["backend/tests"]
